--- a/MVVMApp/Controllers/MainViewController/MainViewController.xib
+++ b/MVVMApp/Controllers/MainViewController/MainViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="MVVMApp" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="9gW-BN-le4" id="rnw-Eb-13U"/>
                 <outlet property="tableView" destination="u4s-xF-L3S" id="yhb-VR-nES"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,13 +24,19 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="793"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="9gW-BN-le4">
+                    <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
+                    <color key="color" systemColor="systemGray2Color"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="9gW-BN-le4" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="8UB-J8-2wp"/>
                 <constraint firstAttribute="bottom" secondItem="u4s-xF-L3S" secondAttribute="bottom" id="LH1-Sc-AzR"/>
                 <constraint firstItem="u4s-xF-L3S" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Qmo-jr-SpI"/>
                 <constraint firstItem="u4s-xF-L3S" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="TD3-ie-SEW"/>
+                <constraint firstItem="9gW-BN-le4" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="W7d-ms-R5t"/>
                 <constraint firstItem="u4s-xF-L3S" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="zsn-SE-BLi"/>
             </constraints>
             <point key="canvasLocation" x="-16.030534351145036" y="19.718309859154932"/>
@@ -38,6 +45,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
